--- a/DiandianIOS/DiandianIOS/DARootView.storyboard
+++ b/DiandianIOS/DiandianIOS/DARootView.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="4514" systemVersion="13A3028" targetRuntime="iOS.CocoaTouch.iPad" propertyAccessControl="none" initialViewController="lfc-Ep-Daj">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="5053" systemVersion="13C64" targetRuntime="iOS.CocoaTouch.iPad" propertyAccessControl="none" initialViewController="lfc-Ep-Daj">
     <dependencies>
         <deployment defaultVersion="1792" identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3747"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3733"/>
     </dependencies>
     <scenes>
         <!--Root View Controller-->
@@ -31,6 +31,15 @@
                                 <rect key="frame" x="11" y="0.0" width="129" height="768"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
                             </view>
+                            <tableView hidden="YES" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="9qc-jU-B36">
+                                <rect key="frame" x="757" y="67" width="250" height="300"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <connections>
+                                    <outlet property="dataSource" destination="lfc-Ep-Daj" id="UHT-au-95e"/>
+                                    <outlet property="delegate" destination="lfc-Ep-Daj" id="lw1-5w-uxP"/>
+                                </connections>
+                            </tableView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <simulatedOrientationMetrics key="simulatedOrientationMetrics" orientation="landscapeRight"/>
@@ -44,6 +53,7 @@
                         <outlet property="MenuGird" destination="pFM-TM-8Tz" id="Yij-XG-OTE"/>
                         <outlet property="filerListView" destination="SvP-sj-Mta" id="h63-VV-Yci"/>
                         <outlet property="orderListView" destination="6UJ-dq-TW2" id="3as-ZA-9ks"/>
+                        <outlet property="quickSearchTableView" destination="9qc-jU-B36" id="x51-pD-6mG"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="JP9-3T-V8m" userLabel="First Responder" sceneMemberID="firstResponder"/>
